Fix pricing spacing.

--- a/css/pricing.scss
+++ b/css/pricing.scss
@@ -42,6 +42,8 @@ body.pricing #body {
 		display: block;
 		margin-left: -24px;
 		margin-top: 32px;
+		font-size: 24px;
+		line-height: 28px;
 		font-weight: normal;
 		color: $color-gray;
 	}
